Wrote a script to generate Club Members

--- a/scripts/club-members/package.json
+++ b/scripts/club-members/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-users",
+  "name": "create-club-members",
   "version": "1.0.0",
   "description": "create users",
   "main": "index.s",
