--- a/scripts/create-tournament/package.json
+++ b/scripts/create-tournament/package.json
@@ -2,7 +2,7 @@
   "name": "create-tournament",
   "version": "1.0.0",
   "description": "create users",
-  "main": "index.s",
+  "main": "index.js",
   "author": "Rodrigo Silveira",
   "license": "MIT",
   "dependencies": {
