--- a/scripts/club-members/package.json
+++ b/scripts/club-members/package.json
@@ -2,7 +2,7 @@
   "name": "create-club-members",
   "version": "1.0.0",
   "description": "create users",
-  "main": "index.s",
+  "main": "index.js",
   "author": "Rodrigo Silveira",
   "license": "MIT",
   "dependencies": {
