--- a/scripts/simulate-game-result/package.json
+++ b/scripts/simulate-game-result/package.json
@@ -40,7 +40,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.3",
     "ts-node": "10.5.0 ",
-    "typescript": "^4.7.3",
-    "tslint-to-eslint-config": "^2.13.0"
+    "tslint-to-eslint-config": "^2.13.0",
+    "typescript": "^4.7.3"
   }
 }
