--- a/scripts/simulate-game-result/tsconfig.json
+++ b/scripts/simulate-game-result/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
+    "target": "es6",
     "module": "commonjs",
+    "strict": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es6",
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
+     "noImplicitAny": true,
+     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
